# BinarySignal

./: .gitignore  CMakeLists.txt  README.md  binarySignal.cpp  binarySignal.h  main.cpp  menu.cpp  menu.h  task.md
